--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width;initial-scale=1">
 <head>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<title>Twitter Bootstrap</title>
 	<div class="container">
 		<div class="row">
